# bazel_rust_python

./: .gitignore  Cargo.toml  WORKSPACE
cargo/: BUILD  BUILD.bazel  Cargo.toml  crates.bzl  pyo3.extra.BUILD
cargo/remote/: aho-corasick-0.7.13.BUILD.bazel  bitflags-1.2.1.BUILD.bazel  cloudabi-0.1.0.BUILD.bazel  cpython-0.5.0.BUILD  cpython-0.5.1.BUILD.bazel  ctor-0.1.15.BUILD  ctor-0.1.15.BUILD.bazel  ghost-0.1.1.BUILD  ghost-0.1.2.BUILD.bazel  indoc-0.3.5.BUILD  indoc-0.3.6.BUILD.bazel  indoc-impl-0.3.5.BUILD  indoc-impl-0.3.6.BUILD.bazel  instant-0.1.7.BUILD.bazel  inventory-0.1.6.BUILD  inventory-0.1.9.BUILD.bazel  inventory-impl-0.1.6.BUILD  inventory-impl-0.1.9.BUILD.bazel  lock_api-0.3.4.BUILD  lock_api-0.4.1.BUILD.bazel  memchr-2.3.3.BUILD.bazel  num-traits-0.2.12.BUILD.bazel  parking_lot-0.10.2.BUILD  parking_lot-0.11.0.BUILD.bazel  parking_lot_core-0.7.2.BUILD  parking_lot_core-0.8.0.BUILD.bazel  paste-0.1.16.BUILD  paste-0.1.17.BUILD  paste-0.1.18.BUILD.bazel  paste-impl-0.1.16.BUILD  paste-impl-0.1.17.BUILD  paste-impl-0.1.18.BUILD.bazel  proc-macro-hack-0.5.16.BUILD  proc-macro-hack-0.5.18.BUILD.bazel  proc-macro2-1.0.18.BUILD  proc-macro2-1.0.21.BUILD.bazel  pyo3-0.10.1.BUILD  pyo3-0.12.1.BUILD.bazel  pyo3-derive-backend-0.10.1.BUILD  pyo3-derive-backend-0.12.1.BUILD.bazel  (+22 more)
paste_test/: BUILD  lib.rs  main.rs
pyo3_test/: BUILD  Cargo.toml  test.py
rust_cpython_test/: BUILD  Cargo.toml  test.py
rust_cpython_test/src/: lib.rs
