[package]
name = "rust_cpython"
version = "0.1.0"
authors = ["Ali Shariat <shariat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_test"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
